--- a/ios-developer.html
+++ b/ios-developer.html
@@ -128,11 +128,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://amswh.avature.net/careers/JobDetail/Senior-iOS-Developer/16364'>Senior iOS Developer - External Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://amswh.avature.net/careers/JobDetail/Senior-iOS-Developer/16364'>Senior iOS Developer - External Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://crisalix.workable.com/j/1957ED4B8D?viewed=true'>Crisalix - Jobs: Senior iOS App Developer + Deep Learning ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/1957ED4B8D?viewed=true'>Crisalix - Jobs: Senior iOS App Developer + Deep Learning ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Experienced in Machine learning algorithms and implementations. Computer 
 Vision / Computational geometry. GIT version control (good knowledge). English
@@ -159,7 +159,7 @@ Tired of spending your valuable time dealing with clients directly, estimating,?
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://santoranakama.applytojob.com/apply/Usr4PWiR9i/LeadSenior-IOS-Developer-Panya-Studios'>Lead/Senior iOS Developer | Panya Studios - Santora Nakama - Career Page</a></h5> 
+<h5><a href='http://santoranakama.applytojob.com/apply/Usr4PWiR9i/LeadSenior-IOS-Developer-Panya-Studios'>Lead/Senior iOS Developer | Panya Studios - Santora Nakama - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -222,7 +222,7 @@ label.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CrossBorderTalents1/743999682221403-ios-developer-to-work-in-lisbon-portugal'>Cross Border Talents IOS Developer to Work In Lisbon, Portugal | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CrossBorderTalents1/743999682221403-ios-developer-to-work-in-lisbon-portugal'>Cross Border Talents IOS Developer to Work In Lisbon, Portugal | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -282,7 +282,7 @@ label.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/picsart/1633c0cc-51c5-4067-bfe8-416279b19549'>PicsArt - Senior iOS Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/picsart/1633c0cc-51c5-4067-bfe8-416279b19549'>PicsArt - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -370,7 +370,7 @@ Things?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<h5><a href='https://nodes.recruitee.com/o/ios-developer-multiple-locations'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nodes.recruitee.com/o/ios-developer-multiple-locations'>
       iOS Developer - Multiple Locations - Nodes
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -380,11 +380,11 @@ Things?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Playtech/743999691320508-ios-developer'>Playtech iOS Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Playtech/743999691320508-ios-developer'>Playtech iOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-07-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://semios.workable.com/j/1154EE2A14'>Semios - Jobs: JavaScript Developer - Apply online</a></h5> 
+<h5><a href='https://semios.workable.com/j/1154EE2A14'>Semios - Jobs: JavaScript Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-07-09</p>
 <hr/>
@@ -419,7 +419,7 @@ Things?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/beetalents/5c992ef2-7127-4b22-b39e-536ddba7f4d9'>Bee Talents - Senior iOS Developer - Untitled Kingdom [10-14k PLN B2B]</a></h5> 
+<h5><a href='https://jobs.lever.co/beetalents/5c992ef2-7127-4b22-b39e-536ddba7f4d9'>Bee Talents - Senior iOS Developer - Untitled Kingdom [10-14k PLN B2B]</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
