--- a/frontend.html
+++ b/frontend.html
@@ -102,7 +102,7 @@
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/elementai/jobs/1785999'>Job Application for D?veloppeur(euse) front-end - Knowledge Scout | Front-End Software Developer - Knowledge Scout at Element AI</a></h5> 
+<h5><a href='https://boards.greenhouse.io/elementai/jobs/1785999'>Job Application for D?veloppeur(euse) front-end - Knowledge Scout | Front-End Software Developer - Knowledge Scout at Element AI</a></h5> 
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -116,7 +116,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/liveramp/jobs/1767629'>Job Application for Software Engineer - Frontend at LiveRamp</a></h5> 
+<h5><a href='https://boards.greenhouse.io/liveramp/jobs/1767629'>Job Application for Software Engineer - Frontend at LiveRamp</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -212,7 +212,7 @@ Frontend Developer (m/w/x). JavaScript, HTML und CSS sind Dein Revier?</p>
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply online for the job of Senior Software Developer: Frontend focus at Ecosia.</p>
 <hr/>
-<h5><a href='https://zl.workable.com/j/22786BC705'>Docplanner / Doctoralia - Jobs: JR Front-end Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zl.workable.com/j/22786BC705'>Docplanner / Doctoralia - Jobs: JR Front-end Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of JR Front-end Developer at Docplanner / Doctoralia.</p>
 <hr/>
@@ -238,7 +238,7 @@ have?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Front-end Developer at Pixel Union.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ProspectInfosysInc/743999692275746-frontend-developer'>Prospect Infosys Inc. Frontend Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ProspectInfosysInc/743999692275746-frontend-developer'>Prospect Infosys Inc. Frontend Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -250,7 +250,7 @@ have?...</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://intellectsoft.workable.com/j/971E7D2C95'>Intellectsoft - Jobs: Middle Front-end (Angular) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://intellectsoft.workable.com/j/971E7D2C95'>Intellectsoft - Jobs: Middle Front-end (Angular) - Apply online</a></h5> 
 <p><span class="badge badge-light">Kyiv Kyiv Palo Alto</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -307,7 +307,7 @@ industry-leading SaaS based platform that solves a suite of provider data?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/daveramsey/job/o0IDafwf'>Ramsey Solutions Careers - Senior Frontend Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/daveramsey/job/o0IDafwf'>Ramsey Solutions Careers - Senior Frontend Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Our technology teams are growing, and we're hiring a Senior Frontend Engineer. 
 If you're looking for a career with a purpose, you've come to the right place.</p>
@@ -380,7 +380,7 @@ machine learning alongside financial engineering to continuously turn data into?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/INNOVIEW/743999692173925-frontend-developer'>Innoview Frontend Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/INNOVIEW/743999692173925-frontend-developer'>Innoview Frontend Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -388,11 +388,11 @@ machine learning alongside financial engineering to continuously turn data into?
 <p><span class="badge badge-light">San Antonio, TX</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://futrli.workable.com/j/30D409C576?viewed=true'>Lead Frontend Engineer - Apply online - Futrli - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://futrli.workable.com/j/30D409C576?viewed=true'>Lead Frontend Engineer - Apply online - Futrli - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Apply online for the job of Lead Frontend Engineer at Futrli.</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/iflix/job/oDVDafw5'>iflix Careers - Senior Frontend Engineer - React</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/iflix/job/oDVDafw5'>iflix Careers - Senior Frontend Engineer - React</a></h5> 
 <p><span class="badge badge-light">Melbourne</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -438,7 +438,7 @@ machine learning alongside financial engineering to continuously turn data into?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/patientslikeme/jobs/1783776?gh_jid=1783776'>Job Application for Principal Front-End Engineer at PatientsLikeMe</a></h5> 
+<h5><a href='https://boards.greenhouse.io/patientslikeme/jobs/1783776?gh_jid=1783776'>Job Application for Principal Front-End Engineer at PatientsLikeMe</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
